--- a/src/main/resources/assets/enchanting_plus/lang/en_us.json
+++ b/src/main/resources/assets/enchanting_plus/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "enchantment.enchanting_plus.swiftness": "Swiftness",
-  "enchantment.enchanting_plus.life_leech": "Life Leech"
+  "enchantment.enchanting_plus.life_leech": "Life Leech",
+  "enchantment.enchanting_plus.groundshaker": "Groundshaker"
 }
