added Spring Boots enchant + no particles on effects

--- a/src/main/resources/assets/enchanting_plus/lang/en_us.json
+++ b/src/main/resources/assets/enchanting_plus/lang/en_us.json
@@ -2,5 +2,6 @@
   "enchantment.enchanting_plus.swiftness": "Swiftness",
   "enchantment.enchanting_plus.life_leech": "Life Leech",
   "enchantment.enchanting_plus.groundshaker": "Groundshaker",
-  "enchantment.enchanting_plus.cultivator": "Cultivator"
+  "enchantment.enchanting_plus.cultivator": "Cultivator",
+  "enchantment.enchanting_plus.spring_boots": "Spring Boots"
 }
